# internet-shutdown-larp

./: .gitignore  Cargo.toml  README.md  anonymous.toml  base-station.just  characters.just  flake.nix  image.just  journalist.just  justfile  lora.just  map-lite.just
.github/workflows/: build.yaml  cache-larp-bot.yml
crates/larp-bot/: Cargo.toml
crates/larp-bot/src/: anonymous.rs  bot.rs  config.rs  identity.rs  lib.rs  main.rs  qr.rs  scenario.rs
crates/larp-e2e/: Cargo.toml
crates/larp-e2e/src/: lib.rs
crates/larp-e2e/tests/: anonymous.rs  e2e.rs
docs/: design.md  rns-gateway.md
gateway/: rns_gateway.py  test_gateway.py
nix/: base-station.nix  captive-portal.nix  larp-bot-package.nix  larp-bot.nix  rns-gateway-package.nix  rns-gateway.nix  timezone.nix
portal/: index.html
router/: base-station.rsc.tpl
scenarios/: firefighters.toml  hospital.toml  journalist.toml  neighbor-mayor.toml  relative.toml
