# Workspace for the LARP crates (see docs/design.md). The dash-chat crates are
# consumed via git, pinned to the v0.18.9 tag — the stable app version the
# players run — so the bot speaks exactly their wire dialect. The mailbox
# image (a different, newer dash-chat branch) serves 0.18 clients through its
# explicit v0.18 compat shim, so it needs no matching pin.
[workspace]
resolver = "2"
members = ["crates/larp-bot", "crates/larp-e2e"]

[workspace.dependencies]
dashchat-node = { git = "https://github.com/dash-chat/dash-chat", rev = "f9bb92da362460185b1642a9cddcf61be44884e2" }
mailbox-client = { git = "https://github.com/dash-chat/dash-chat", rev = "f9bb92da362460185b1642a9cddcf61be44884e2" }
