# End-to-end tests, split out of larp-bot so the bot crate itself carries no
# dev-dependency on dashchat-node's `testing` feature (cargo still
# feature-unifies workspace members' dev-deps into every build, so `testing`
# is compiled into workspace builds of the bot — harmless dead code).
[package]
name = "larp-e2e"
version = "0.1.0"
edition = "2021"
publish = false

[dev-dependencies]
larp-bot = { path = "../larp-bot" }
dashchat-node = { workspace = true, features = ["testing"] }
# Same git source string as dashchat-node's own dep (cargo unifies them; the
# lockfile pins the rev). Only needed to name `Access` in the test.
p2panda-auth = { git = "https://github.com/maackle/p2panda.git", branch = "dashchat" }
mailbox-client = { workspace = true }
anyhow = "1"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
